out/k8s/monitoring/MutatingWebhookConfiguration.monitoring-kube-prometheus-admission.k8s.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: kube-prometheus-stack-admission
    app.kubernetes.io/component: prometheus-operator-webhook
    app.kubernetes.io/instance: monitoring-kube-prometheus-stack-helm-c8a1ee83
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 65.3.1
    chart: kube-prometheus-stack-65.3.1
    heritage: Helm
    release: monitoring-kube-prometheus-stack-helm-c8a1ee83
  name: monitoring-kube-prometheus-admission
  namespace: monitoring
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: monitoring-kube-prometheus-operator
        namespace: monitoring
        path: /admission-prometheusrules/mutate
    failurePolicy: Ignore
    name: prometheusrulemutate.monitoring.coreos.com
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
        resources:
          - prometheusrules
    sideEffects: None
    timeoutSeconds: 10
